[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://addons/UDSEngine/Event_Manager/Event Editor Input Form.gd" id="1"]
[ext_resource type="PackedScene" path="res://addons/UDSEngine/Event_Manager/popup_Event_Selection.tscn" id="2"]
[ext_resource type="Theme" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_15.tres" id="3"]
[ext_resource type="PackedScene" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_newValue.tscn" id="4"]
[ext_resource type="PackedScene" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_deleteKey.tscn" id="5"]
[ext_resource type="PackedScene" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="6"]
[ext_resource type="PackedScene" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Text.tscn" id="7"]
[ext_resource type="PackedScene" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="8"]

[node name="EventEditorInputForm" type="Control" groups=["Tab"]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( "3" )
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Scroll1" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="Scroll1"]
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Input_Label_Template2" parent="Scroll1/VBox1" instance=ExtResource( "6" )]
anchor_right = 0.0
offset_right = 1024.0
offset_bottom = 35.0
size_flags_stretch_ratio = 1.0

[node name="Label_Button" parent="Scroll1/VBox1/Input_Label_Template2/HBox1" index="0"]
mouse_filter = 2
text = "Event Editor"

[node name="Input_Label_Template3" parent="Scroll1/VBox1" instance=ExtResource( "6" )]
anchor_right = 0.0
offset_top = 39.0
offset_right = 1024.0
offset_bottom = 74.0
size_flags_stretch_ratio = 1.0

[node name="Label_Button" parent="Scroll1/VBox1/Input_Label_Template3/HBox1" index="0"]
mouse_filter = 2
text = "!!Warning - Save before switching to another page!!!"

[node name="input_templateBuffer" parent="Scroll1/VBox1" instance=ExtResource( "8" )]
anchor_right = 0.0
offset_top = 78.0
offset_right = 1024.0
offset_bottom = 78.0

[node name="HBox3" type="HBoxContainer" parent="Scroll1/VBox1"]
offset_top = 82.0
offset_right = 1024.0
offset_bottom = 155.0

[node name="Input_Text" parent="Scroll1/VBox1/HBox3" instance=ExtResource( "7" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 461.0
offset_bottom = 73.0
label_text = "Event Name"
is_label_button = false

[node name="Label" parent="Scroll1/VBox1/HBox3/Input_Text" index="0"]
offset_right = 461.0

[node name="Input" parent="Scroll1/VBox1/HBox3/Input_Text" index="1"]
offset_right = 461.0
offset_bottom = 69.0

[node name="input_templateBuffer" parent="Scroll1/VBox1/HBox3/Input_Text" index="2"]
offset_top = 73.0
offset_right = 461.0
offset_bottom = 73.0

[node name="Buffer" type="Label" parent="Scroll1/VBox1/HBox3"]
offset_left = 465.0
offset_right = 558.0
offset_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="HBox1" type="HBoxContainer" parent="Scroll1/VBox1/HBox3"]
offset_left = 562.0
offset_right = 1024.0
offset_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Add_Page_Button" type="Button" parent="Scroll1/VBox1/HBox3/HBox1"]
offset_right = 151.0
offset_bottom = 73.0
size_flags_horizontal = 3
text = "Add Page"

[node name="Copy_Page_Button" type="Button" parent="Scroll1/VBox1/HBox3/HBox1"]
offset_left = 155.0
offset_right = 306.0
offset_bottom = 73.0
size_flags_horizontal = 3
hint_tooltip = "Makes a copy of the selected page and adds it after the last page"
text = "Duplicate Page"

[node name="Delete_Page_Button" type="Button" parent="Scroll1/VBox1/HBox3/HBox1"]
offset_left = 310.0
offset_right = 462.0
offset_bottom = 73.0
size_flags_horizontal = 3
text = "Delete Page"

[node name="Hbox4" type="HBoxContainer" parent="Scroll1/VBox1"]
offset_top = 159.0
offset_right = 1024.0
offset_bottom = 159.0
size_flags_horizontal = 3

[node name="HBox1" type="HBoxContainer" parent="Scroll1/VBox1"]
offset_top = 163.0
offset_right = 1024.0
offset_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="Scroll1/VBox1/HBox1"]
offset_right = 510.0
offset_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox1" type="HBoxContainer" parent="Scroll1/VBox1/HBox1"]
offset_left = 514.0
offset_right = 1024.0
offset_bottom = 203.0
size_flags_horizontal = 3

[node name="VBox1" type="VBoxContainer" parent="Scroll1/VBox1"]
offset_top = 370.0
offset_right = 1024.0
offset_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox2" type="HBoxContainer" parent="Scroll1/VBox1"]
offset_top = 578.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3

[node name="Save_Close_Button" type="Button" parent="Scroll1/VBox1/HBox2"]
offset_right = 289.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save and Close"

[node name="Label" type="Label" parent="Scroll1/VBox1/HBox2"]
offset_left = 293.0
offset_right = 582.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Save_Page_Button" type="Button" parent="Scroll1/VBox1/HBox2"]
offset_left = 586.0
offset_right = 875.0
offset_bottom = 22.0
size_flags_horizontal = 3
text = "Save Page"

[node name="Cancel_Button" type="Button" parent="Scroll1/VBox1/HBox2"]
offset_left = 879.0
offset_right = 1024.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Cancel"

[node name="Popups" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.894118)

[node name="popup_delete_confirm" type="Popup" parent="Popups"]

[node name="PanelContainer" type="ColorRect" parent="Popups/popup_delete_confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"

[node name="Label2" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]

[node name="Accept" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
text = "Cancel"

[node name="popup_newValue" parent="Popups" instance=ExtResource( "4" )]

[node name="Timer2" type="Timer" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text/Input" index="1"]
wait_time = 0.5

[node name="PopupMenu2" type="PopupMenu" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text/Input" index="2"]
item_count = 9
item_0/text = "Cut"
item_0/id = 0
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2
item_3/text = ""
item_3/id = -1
item_3/separator = true
item_4/text = "Select All"
item_4/id = 4
item_5/text = "Clear"
item_5/id = 3
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Undo"
item_7/id = 5
item_8/text = "Redo"
item_8/id = 6

[node name="Timer3" type="Timer" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text/Input" index="3"]
wait_time = 0.5

[node name="PopupMenu3" type="PopupMenu" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text/Input" index="4"]
item_count = 9
item_0/text = "Cut"
item_0/id = 0
item_1/text = "Copy"
item_1/id = 1
item_2/text = "Paste"
item_2/id = 2
item_3/text = ""
item_3/id = -1
item_3/separator = true
item_4/text = "Select All"
item_4/id = 4
item_5/text = "Clear"
item_5/id = 3
item_6/text = ""
item_6/id = -1
item_6/separator = true
item_7/text = "Undo"
item_7/id = 5
item_8/text = "Redo"
item_8/id = 6

[node name="PopupMenu2" type="PopupMenu" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection/Input" index="1"]
item_count = 13
item_0/text = "Text"
item_0/checkable = 2
item_0/checked = true
item_0/id = 0
item_1/text = "List"
item_1/checkable = 2
item_1/id = 1
item_2/text = "Input Control"
item_2/checkable = 2
item_2/id = 2
item_3/text = "Number Range"
item_3/checkable = 2
item_3/id = 3
item_4/text = "Sound Effect"
item_4/checkable = 2
item_4/id = 4
item_5/text = "Whole Number"
item_5/checkable = 2
item_5/id = 5
item_6/text = "Decimal Number"
item_6/checkable = 2
item_6/id = 6
item_7/text = "True or False"
item_7/checkable = 2
item_7/id = 7
item_8/text = "Dropdown List"
item_8/checkable = 2
item_8/id = 8
item_9/text = "Icon Display"
item_9/checkable = 2
item_9/id = 9
item_10/text = "Scene Path"
item_10/checkable = 2
item_10/id = 10
item_11/text = "Sprite"
item_11/checkable = 2
item_11/id = 11
item_12/text = "Vector 2 or 3"
item_12/checkable = 2
item_12/id = 12

[node name="PopupMenu3" type="PopupMenu" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection/Input" index="2"]
item_count = 13
item_0/text = "Text"
item_0/checkable = 2
item_0/checked = true
item_0/id = 0
item_1/text = "List"
item_1/checkable = 2
item_1/id = 1
item_2/text = "Input Control"
item_2/checkable = 2
item_2/id = 2
item_3/text = "Number Range"
item_3/checkable = 2
item_3/id = 3
item_4/text = "Sound Effect"
item_4/checkable = 2
item_4/id = 4
item_5/text = "Whole Number"
item_5/checkable = 2
item_5/id = 5
item_6/text = "Decimal Number"
item_6/checkable = 2
item_6/id = 6
item_7/text = "True or False"
item_7/checkable = 2
item_7/id = 7
item_8/text = "Dropdown List"
item_8/checkable = 2
item_8/id = 8
item_9/text = "Icon Display"
item_9/checkable = 2
item_9/id = 9
item_10/text = "Scene Path"
item_10/checkable = 2
item_10/id = 10
item_11/text = "Sprite"
item_11/checkable = 2
item_11/id = 11
item_12/text = "Vector 2 or 3"
item_12/checkable = 2
item_12/id = 12

[node name="PopupMenu2" type="PopupMenu" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection/Input" index="1"]
item_count = 7
item_0/text = "Character Classes"
item_0/checkable = 2
item_0/checked = true
item_0/id = 0
item_1/text = "Control Categories"
item_1/checkable = 2
item_1/id = 1
item_2/text = "DataTypes"
item_2/checkable = 2
item_2/id = 2
item_3/text = "Field_Pref_Values"
item_3/checkable = 2
item_3/id = 3
item_4/text = "Item_Type"
item_4/checkable = 2
item_4/id = 4
item_5/text = "Items"
item_5/checkable = 2
item_5/id = 5
item_6/text = "Maps"
item_6/checkable = 2
item_6/id = 6

[node name="PopupMenu3" type="PopupMenu" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection/Input" index="2"]
item_count = 7
item_0/text = "Character Classes"
item_0/checkable = 2
item_0/checked = true
item_0/id = 0
item_1/text = "Control Categories"
item_1/checkable = 2
item_1/id = 1
item_2/text = "DataTypes"
item_2/checkable = 2
item_2/id = 2
item_3/text = "Field_Pref_Values"
item_3/checkable = 2
item_3/id = 3
item_4/text = "Item_Type"
item_4/checkable = 2
item_4/id = 4
item_5/text = "Items"
item_5/checkable = 2
item_5/id = 5
item_6/text = "Maps"
item_6/checkable = 2
item_6/id = 6

[node name="popup_Event_Selection" parent="Popups" instance=ExtResource( "2" )]
visible = false

[node name="Existing_Events_Dropdown" parent="Popups/popup_Event_Selection/PanelContainer/VBox1/HBox1" index="0"]
visible = true
selection_table_name = "Events"

[node name="popup_deleteKey" parent="Popups" instance=ExtResource( "5" )]

[node name="VScrollBar2" type="VScrollBar" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" index="1"]

[node name="VScrollBar3" type="VScrollBar" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" index="2"]

[node name="ListInput" type="Control" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FileSelect" type="Control" parent="Popups"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="button_up" from="Scroll1/VBox1/HBox3/HBox1/Add_Page_Button" to="." method="add_new_event_page"]
[connection signal="button_up" from="Scroll1/VBox1/HBox3/HBox1/Copy_Page_Button" to="." method="_on_Copy_Page_Button_button_up"]
[connection signal="button_up" from="Scroll1/VBox1/HBox3/HBox1/Delete_Page_Button" to="." method="_on_Delete_Page_Button_button_up"]
[connection signal="button_up" from="Scroll1/VBox1/HBox2/Save_Close_Button" to="." method="_on_Save_Close_Button_button_up"]
[connection signal="button_up" from="Scroll1/VBox1/HBox2/Save_Page_Button" to="." method="_on_Save_Page_Button_button_up"]
[connection signal="button_up" from="Scroll1/VBox1/HBox2/Cancel_Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Popups/popup_Event_Selection/PanelContainer/VBox1/HBox1/Create_New_Event_Button" to="." method="_on_Create_New_Event_Button_button_up"]
[connection signal="button_up" from="Popups/popup_Event_Selection/PanelContainer/VBox1/HBox2/Accept" to="." method="_on_event_selection_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_Event_Selection/PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_event_selection_Cancel_button_up"]

[editable path="Scroll1/VBox1/Input_Label_Template2"]
[editable path="Scroll1/VBox1/Input_Label_Template3"]
[editable path="Scroll1/VBox1/HBox3/Input_Text"]
[editable path="Popups/popup_newValue"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection"]
[editable path="Popups/popup_Event_Selection"]
[editable path="Popups/popup_Event_Selection/PanelContainer/VBox1/Input_Label_Template"]
[editable path="Popups/popup_Event_Selection/PanelContainer/VBox1/HBox1/Existing_Events_Dropdown"]
[editable path="Popups/popup_deleteKey"]
